--- a/src/icp_nft_backend/Cargo.toml
+++ b/src/icp_nft_backend/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
-name = "icp_nft_backend"
+name = "dip721_nft_container"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dependencies]
+ic-cdk = { version = "0.8.0-beta.0" }
+ic-cdk-macros = "0.8"
+include-base64 = "0.1"
+serde = { version = "1", features = ["derive"] }
+percent-encoding = "2.1"
+ic-certified-map = "0.3"
+sha2 = "0.10.2"
+serde_cbor = "0.11.2"
+base64 = "0.13.0"
 
 [lib]
 crate-type = ["cdylib"]
-
-[dependencies]
-candid = "0.8"
-ic-cdk = "0.7"
-ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
